done, waiting for right tipography

--- a/index.html
+++ b/index.html
@@ -3,49 +3,57 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | [Challenge Name Here]</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-  Samuel Green
-  Available to Walk
-
-  That sounds great. I’d be happy with that.
-
-  Could you send over some pictures of your dog, please?
-
-  Here are a few pictures. She’s a happy girl!
-
-  Can you make it?
-
-  She looks so happy! The time we discussed works. How long shall I take her out for?
-
-  30 minute walk
-  $29
-
-  1 hour walk
-  $49
-
-  Type a message…
-
-  Simple booking
-
-  Stay in touch with our dog walkers through the chat interface. This makes it easy to 
-  discuss arrangements and make bookings. Once the walk has been completed you can rate 
-  your walker and book again all through the chat.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+     <div class="all-container">
+      <div class="container">
+        <div class="phone">
+          <div class="phone-top">
+            <div class="notch"></div>
+            <div class="avatar">
+              <p class="back"><<<<<<</p>
+              <img src="images/avatar.jpg">
+              <div class="name">
+                <h4>Samuel Green</h4>
+                <p class="sub-ttl">Available to Walk</p>
+              <div class="points"><p>.</p><p>.</p><p>.</p></div>
+              </div>
+            </div>
+          </div>
+          <div class="phone-chat">
+            <p class="left-chat">That sounds great. I’d be happy with that.</p>
+            <p class="left-chat">Could you send over some pictures of your dog, please?</p>
+            <div class="dog-img"><img src="images/dog-image-1.jpg"><img src="images/dog-image-2.jpg"><img src="images/dog-image-3.jpg"></div>
+            <p class="right-chat"> Here are a few pictures. She’s a happy girl!</p>
+            <p class="right-chat">Can you make it?</p>
+            <p class="left-chat">She looks so happy! The time we discussed works. How long shall I take her out for?</p>
+           <div class="left-chat check">
+              <div class="radio"></div>
+              <p>30 minute walk</p>
+              <p><b class="price">$29</b></hp>
+            </div>
+            <div class="left-chat check">
+              <div class="radio"></div>
+              <p> 1 hour walk</p>
+              <p><b class="price">$49</b></p>
+            </div>
+          <div class="write">
+            <input type="text" placeholder="Type a message…">
+            <button type="button"><p> > </b></button>
+          </div>
+        </div>
+      </div>
+      </div> 
+    <div class="main-heading">
+      <h1>Simple booking</h1>
+      <p>Stay in touch with our dog walkers through the chat interface. This makes it easy to 
+      discuss arrangements and make bookings. Once the walk has been completed you can rate 
+       your walker and book again all through the chat.</p>
+    </div>
+     </div>
+<div class="bg1"></div> <div class="bg2"></div>
 </body>
 </html>
